Webpack builds are now in their individual package folders, a common webpack package has been created which can be merged into other configurations to conform all build processes

--- a/packages/main-module-1/source/html/index.html
+++ b/packages/main-module-1/source/html/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Title</title>
+  <title>Exaple Module 1</title>
   <link rel="stylesheet" href="/assets/styles.css">
 </head>
 <body>
-  test
+  Example Module 1
   <script src="/assets/bundle.js"></script>
 </body>
 </html>
